--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -28,7 +28,8 @@
                             jcr_root/content/admin;overwrite:=true;uninstall:=true;path:=/content/admin,
                             jcr_root/content/assets;overwrite:=false;uninstall:=false;path:=/content/assets,
                             jcr_root/content;overwrite:=false;overwriteProperties:=true;uninstall:=false;path:=/content,
-                            jcr_root/content/comments;overwrite:=false;uninstall:=false;path:=/content/comments
+                            jcr_root/content/comments;overwrite:=false;uninstall:=false;path:=/content/comments,
+                            jcr_root-ignore-import/libs/sling/xss;overwrite:=true;uninstall:=true;ignoreImportProviders:="json,xml";path:=/libs/sling/xss
                         </Sling-Initial-Content>
                     </instructions>
                 </configuration>
